--- a/info.yaml
+++ b/info.yaml
@@ -39,19 +39,34 @@ documentation:
 
 # A description of what the inputs do (e.g. red button, SPI CLK, SPI MOSI, etc).
   inputs:               
-    - a_sign[1]   = ui_in[7]
-    - a_expo[3:0] = ui_in[6:3]
-    - a_mant[2:0] = ui_in[2:0]
+    - Float a Mantissa[0]
+    - Float a Mantissa[1]
+    - Float a Mantissa[2]
+    - Float a Exponent[0]
+    - Float a Exponent[1]
+    - Float a Exponent[2]
+    - Float a Exponent[3]
+    - Float a Sign
 # A description of what the outputs do (e.g. status LED, SPI MISO, etc)
   outputs:
-    - uo_out[7]   = sign
-    - uo_out[2:0] = mant
-    - uo_out[6:3] = expo
+    - Float out Mantissa[0]
+    - Float out Mantissa[1]
+    - Float out Mantissa[2]
+    - Float out Exponent[0]
+    - Float out Exponent[1]
+    - Float out Exponent[2]
+    - Float out Exponent[3]
+    - Float out Sign
 # A description of what the bidirectional I/O pins do (e.g. I2C SDA, I2C SCL, etc)
   bidirectional:
-    - b_sign[1]   = uio_in[7]
-    - b_expo[3:0] = uio_in[6:3]
-    - b_mant[2:0] = uio_in[2:0]
+    - Float b Mantissa[0]
+    - Float b Mantissa[1]
+    - Float b Mantissa[2]
+    - Float b Exponent[0]
+    - Float b Exponent[1]
+    - Float b Exponent[2]
+    - Float b Exponent[3]
+    - Float b Sign
 
 # The following fields are optional
   tag:          "alu, calculator"      # comma separated list of tags: test, encryption, experiment, clock, animation, utility, industrial, pwm, fpga, alu, microprocessor, risc, riscv, sensor, signal generator, fft, filter, music, bcd, sound, serial, timer, random number generator, calculator, decoder, counter, puzzle, multiplier, game, oscillator,
